--- a/templates/citation.html
+++ b/templates/citation.html
@@ -4,7 +4,12 @@
 <meta charset="utf-8">
 <title>Citation: {{ record.title|escape }}</title>
 </head>
-<body vocab="http://schema.org/" typeof="{{ record.schema_type }}">
+<body vocab="http://schema.org/" typeof="{{ record.schema_type }}" {%
+  if record.uri -%}
+    resource="{{ record.uri }}"
+{% else -%}
+    resource="#"
+{%- endif %}>
 <h1>Citation: <span property="name">{{ record.title|escape }}</span></h1>
 {%- if record.authors|length > 1 %}
 <h2>Authors</h2>
@@ -13,8 +18,34 @@
 {%- endif %}
 {%- for author in record.authors %} 
 <div class="author" property="author" typeof="Person">
-    <span property="name">{{ author.name }}</span>
+    <span property="name">{{ author.name|escape }}</span>
 </div>
 {%- endfor %}
+{%- if record.pub_venue %}
+<div property="isPartOf" typeof="{{ record.pub_venue }}" >Published in:
+    <span property="name">{{ record.title2|escape }}</span>
+    {%- if record.publisher %}
+    <span property="publisher" typeof="Organization">
+        <span property="name">{{ record.publisher }}</span>
+        {%- if record.pub_place %}
+        <span property="address location">{{ record.pub_place }}</span>
+        {%- endif %}
+    </span>
+    {%- endif %}
+    {%- if record.pub_date %}
+    <span property="datePublished">{{ record.pub_date }}</span>
+    {%- endif %}
+    {%- if record.isbn_issn and record.pub_venue == 'Book' %}
+    <span property="isbn">ISBN: {{ record.isbn_issn|escape }}</span>
+    {%- elif record.isbn_issn and record.pub_venue == 'Periodical' %}
+    <span property="issn">ISSN: {{ record.isbn_issn|escape }}</span>
+    {%- endif %}
+</div>
+{%- endif %}
+{%- if record.abstract %}
+<div class="abstract">Abstract:
+    <span property="description">{{ record.abstract|escape }}</span>
+</div>
+{%- endif %}
 </body>
 </html>
