--- a/templates/citation.html
+++ b/templates/citation.html
@@ -66,7 +66,7 @@ tbody th { text-align: left; }
 </tr>
 {%- endif %}
 {%- if record.isbn_issn and record.pub_venue == 'Book' %}
-<tr>
+<tr{% if record.schema_type == "Article"%} resource="#pub_venue"{% endif %}>
   <th>ISBN</th>
   <td property="isbn">{{ record.isbn_issn|escape }}</td>
 </tr>
