Correct the @resource context for publisher
Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -48,9 +48,9 @@ tbody th { text-align: left; }
 </tr>
 {%- endif %}
 {%- if record.publisher %}
-<tr>
+<tr resource="#pub_venue">
   <th>Publisher</th>
-  <td><span property="publisher" typeof="Organization" resource="#pub_venue">
+  <td><span property="publisher" typeof="Organization">
         <span property="name">{{ record.publisher }}</span>
         {%- if record.pub_place %}
         <span property="address location">{{ record.pub_place }}</span>
