Search becomes more real
As in, we have a search box. And can parse searches with basic boolean
operators. And show results that link to the citations of interest.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -12,6 +12,11 @@
 <div class="header">
     Bibliography of Canadian Work Labour Studies
 </div>
+<div class="searchbox">
+    <form action="{{ url_for('search_bar') }}">
+        <input type="text" name="s"></input>
+    </form>
+</div>
 </header>
 <section class="citation" vocab="http://schema.org/" typeof="{{ record.schema_type }}" {%
   if record.uri -%}
