--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,7 @@ div.header {
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
 }
-section.citation {
+section.citation, section.results {
     padding: 1em;
 }
 section.citation h1 {
@@ -22,4 +22,18 @@ section.citation h1 {
 section tbody th { 
     text-align: left;
     padding-right: 2em;
+}
+section.result {
+    padding: 0.5em;
+}
+section.result a {
+    text-decoration: none;
+}
+section.result.odd {
+    background-color: #eeeeee;
+}
+div.searchbox {
+    position: absolute;
+    top: 1em;
+    right: 1em;
 }
