--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,29 +1,11 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Search results</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<link href='http://fonts.googleapis.com/css?family=Nunito:700' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<header>
-<div class="header">
-    Bibliography of Canadian Work Labour Studies
-</div>
-<div class="searchbox">
-    <form action="{{ url_for('search_bar') }}">
-        <input type="text" name="s"></input>
-    </form>
-</div>
-</header>
+{% extends "base.html" %}
+{% block title %}Search results{% endblock %}
+{%- block content -%}
 <section class="results">
-{% for r in results %}
+{%- for r in results %}
   <section class="result {{ loop.cycle('odd', 'even') }}">
     <a href="{{ url_for('show_citation', work_id=r[0]) }}">{{ r[1]|striptags }}</a>
   </section>
-{% endfor %}
+{%- endfor %}
 </section>
-</body>
-</html>
+{%- endblock %}
