--- a/templates/home.html
+++ b/templates/home.html
@@ -7,15 +7,16 @@
     5,000 citations of journal articles, books, book chapters, theses, and
     other literature.
 </p>
+<section class="authors">
 <h2>Authors</h2>
 <table>
   <thead>
-    <tr><th>Author</th><th>Number of citations</th></tr>
+    <tr><th>Author</th><th class="numcites">Number of citations</th></tr>
   </thead>
   <tbody>
 {%- for author in summary.authors %}
-  <tr>
-    <td class="author {{ loop.cycle('odd', 'even') }}">
+  <tr class=" {{ loop.cycle('odd', 'even') }}">
+    <td class="author">
       <a href="{{
           url_for('filter_citations', facets='author:' + author.0|striptags)
         }}">{{ author.0|striptags }}</a>
@@ -25,15 +26,17 @@
 {%- endfor %}
   </tbody>
 </table>
+</section>
+<section class="publications">
 <h2>Publications</h2>
 <table>
   <thead>
-    <tr><th>Publication</th><th>Number of citations</th></tr>
+    <tr><th>Publication</th><th class="numcites">Number of citations</th></tr>
   </thead>
   <tbody>
 {%- for pub in summary.pubs %}
-  <tr>
-    <td class="author {{ loop.cycle('odd', 'even') }}">
+  <tr class="{{ loop.cycle('odd', 'even') }}">
+    <td class="pub">
       <a href="{{
           url_for('filter_citations', facets='publication:' + pub.0|striptags)
         }}">{{ pub.0|striptags }}</a>
@@ -43,5 +46,6 @@
 {%- endfor %}
   </tbody>
 </table>
+</section>
 </section>
 {%- endblock %}
