--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
 </div>
 <div class="searchbox">
     <form action="{{ url_for('search_bar') }}">
-        <input type="text" name="s"></input>
+        <label>Search: <input type="search" name="s" autocomplete="on"></input></label>
+        <input type="submit" />
     </form>
 </div>
 </header>
