Labour Studies Index, right!
Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <div class="header">
-    Bibliography of Canadian Work Labour Studies
+    Labour Studies Index
 </div>
 <div class="searchbox">
     <form action="{{ url_for('search_bar') }}">
