--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Bibliography of Canadian Labour Studies{% endblock %}
+{% block title %}Labour Studies Index{% endblock %}
 {%- block content -%}
 <section class="home">
 <p>
-    The <em>Bibliography of Canadian Labour Studies</em> offers approximately
+    The <em>Labour Studies Index</em> offers approximately
     5,000 citations of journal articles, books, book chapters, theses, and
     other literature.
 </p>
