Theses do not have a secondary title
Thus there is no "publication venue" for them, and the attempt
to expose one results in failure.

Fixes #12.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -30,19 +30,21 @@
 </tr>
 {%- endfor %}
 {%- endif %}
-{%- if record.pub_venue == "Periodical" and record.doc_type != "RPRT" %}
+{%- if record.doc_type != "THES" %}
+    {%- if record.pub_venue == "Periodical" and record.doc_type != "RPRT" %}
 <tr property="isPartOf" typeof="{{ record.pub_venue }}" resource="#pub_venue">
   <th>Journal</th>
   <td><span property="name"><a href="{{ 
         url_for('filter_citations', facets='publication:' + record.title2)
     }}">{{ record.title2|escape }}</a></span></td>
 </tr>
-{%- endif %}
-{%- if record.pub_venue == "Book" and record.doc_type != "RPRT" %}
+    {%- endif %}
+    {%- if record.pub_venue == "Book" and record.doc_type != "RPRT" %}
 <tr property="isPartOf" typeof="{{ record.pub_venue }}" resource="#pub_venue">
   <th>Book</th>
   <td><span property="name">{{ record.title2|escape }}</span></td>
 </tr>
+    {%- endif %}
 {%- endif %}
 {%- if record.publisher %}
 <tr resource="#pub_venue">
