Differentiate between the publisher and place of publication
Just add a semicolon.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -56,7 +56,7 @@
 <tr resource="#pub_venue">
   <th>Publisher</th>
   <td><span property="publisher" typeof="Organization">
-        <span property="name">{{ record.publisher }}</span>
+        <span property="name">{{ record.publisher }}</span>;
         {%- if record.pub_place %}
         <span property="address location">{{ record.pub_place }}</span>
         {%- endif %}
