--- a/templates/base.html
+++ b/templates/base.html
@@ -20,5 +20,8 @@
 </div>
 </header>
 {% block content %}{% endblock %}
+<footer class="footer">
+A project of the <a href="http://laurentian.ca/library/">J.N. Desmarais Library</a> at <a href="http://laurentian.ca/">Laurentian University</a>.
+</footer>
 </body>
 </html>
