--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -2,7 +2,14 @@
 {% block title %}Search results{% endblock %}
 {%- block content -%}
 <section class="results">
-{%- for r in results %}
+<span class="result_count">{{ results.start }} - {{ results.end }} of {{ results.cnt }}</span>
+{%- if results.page_next %}
+    <span class="pager"><a href="{{ url_for('search_results', search=results.q, offset=results.page_next, limit=results.limit)}}">Next</a></span>
+{%- endif %}
+{%- if results.page_prev %}
+    <span class="pager"><a href="{{ url_for('search_results', search=results.q, offset=results.page_prev, limit=results.limit)}}">Previous</a></span>
+{%- endif %}
+{%- for r in results.r %}
   <section class="result {{ loop.cycle('odd', 'even') }}">
     <a href="{{ url_for('show_citation', work_id=r[0]) }}">{{ r[1]|striptags }}</a>
   </section>
