Add summary numbers to our summary page
Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     other literature.
 </p>
 <section class="authors">
-<h2>Authors</h2>
+<h2>Authors ({{ summary.acnt }})</h2>
 <table>
   <thead>
     <tr><th>Author</th><th class="numcites">Number of citations</th></tr>
@@ -28,7 +28,7 @@
 </table>
 </section>
 <section class="publications">
-<h2>Publications</h2>
+<h2>Publications ({{ summary.pcnt }})</h2>
 <table>
   <thead>
     <tr><th>Publication</th><th class="numcites">Number of citations</th></tr>
