Support import and display of book contributors
The "contributor" category was being silently dropped by Zotero's RIS export.
We used a local modification (submitted to upstream Zotero) to correct that
behaviour, and can now store the info in the database and display it.

Fixes #18.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -56,6 +56,15 @@
   </span>
   </td>
 </tr>
+{%-         elif author.author_type == 'contributor': %}
+<tr>
+  <th>Contributor</th>
+  <td class="author">
+  <span property="contributor" typeof="Person">
+      <span property="name">{{ author.name|escape }}</span>
+  </span>
+  </td>
+</tr>
 {%-         endif %}
 {%-     endfor %}
 {%- endif %}
