Add publication type summary to home page
Fixes #6.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/static/style.css
+++ b/static/style.css
@@ -39,7 +39,7 @@ section.result a {
 .odd {
     background-color: #eeeeee;
 }
-section.authors, section.publications {
+section.home_summary {
     margin: 0 0 1em 1em;
     float: left;
 }
