Make the header link back to the home page
Fixes #20.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/static/style.css
+++ b/static/style.css
@@ -7,8 +7,9 @@ header, footer {
     padding-bottom: 1em;
     clear: both;
 }
-.footer a {
+.footer a, .header a {
     color: white;
+    text-decoration: none;
 }
 body { 
     margin: 0px;
