--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <div class="header">
-    Labour Studies Index
+    <a href="{{ url_for('home_html')}}"</a>Labour Studies Index</a>
 </div>
 <div class="searchbox">
     <form action="{{ url_for('search_bar') }}">
