Address accessibility issues
Adds a @lang attribute and a value for the Submit button.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
 <div class="searchbox">
     <form action="{{ url_for('search_bar') }}">
         <label>Search: <input type="search" name="s" autocomplete="on"></input></label>
-        <input type="submit" />
+        <input type="submit" value="Submit" />
     </form>
 </div>
 </header>
