Nuke keywords for now
Until we have a controlled thesaurus of descriptive terms to apply,
avoid displaying them.

Fixes #25.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/citation.html
+++ b/templates/citation.html
@@ -131,7 +131,7 @@
   <td><a href="{{ record.url|escape }}" property="url">{{ record.url|escape }}</a></td>
 </tr>
 {%- endif %}
-{%- if record.kw %}
+{%- if record.kw and 0 %}
 <tr>
   <th>Keywords</th>
   <td>
