Deliver an actual count of the number of citations
It's just one more SQL query, and so much more impressive and eternally
accurate than any hard-coded "about" statement.

Fixes #29.

Signed-off-by: Dan Scott <dan@coffeecode.net>

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
 {%- block content -%}
 <section class="home">
 <p>
-    The <em>Labour Studies Index</em> offers approximately
-    5,000 citations of journal articles, books, book chapters, theses, and
+    The <em>Labour Studies Index</em> offers {{ summary.total }}
+    citations of journal articles, books, book chapters, theses, and
     other literature.
 </p>
 <section class="authors home_summary">
